java_code/java-1563191478188-16IT028/abc_output
abc.java:4: error: ';' expected
        Scanner sc=new Scanner(System.in)
                                         ^
1 error
